--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-<h1>艳照门最新可访问地址</h1>
+<div style="text-align:center;">
+<h3>艳照门最新可访问地址</h3>
+  <p>
+      http://www.yeyan02.com:999
+      
+      http://www.yanzhao1.com:999
+  </p>
+  <p>
+    1，获取艳照门最新地址方法：向邮箱 <span style="color:#ff0000;">yanzhaowangdizhi@gmail.com</span> 发任意内容邮件,即可获取到最新地址。
+    2.收藏本网页,获取最新可访问地址。
+  </p>
+</div>
