--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <div style="text-align:center;">
   <h3>艳照门最新可访问地址</h3>
   <p>
-      http://www.yeyan02.com:999
+    <a href="http://www.yeyan02.com:999" target="_blank">http://www.yeyan02.com:999</a>
    </p>    
     <p>
-      http://www.yanzhao1.com:999
+      <a href="http://www.yanzhao1.com:999" target="_blank">http://www.yanzhao1.com:999</a>
   </p>
   <br/>
   <br/>
