--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
-<div style="text-align:center;">
-  <h3>艳照门最新可访问地址</h3>
+<div style="text-align:center;font-size:18px;line-height:36px;">
+  <h3>【艳照门】最新可访问地址(收藏该网页或记住该网址,可防止与本站失去联系)</h3>
   <p>
-    <a href="http://www.yeyan02.com" target="_blank">http://www.yeyan02.com</a>
+    <a href="http://www.yanzm6.xyz.com" target="_blank">http://www.yanzm6.xyz.com</a>
    </p>    
     <p>
-      <a href="http://www.yanzhao1.com" target="_blank">http://www.yanzhao1.com</a>
+      <a href="http://www.yanzm7.xyz" target="_blank">http://www.yanzm7.xyz</a>
+  </p>
+     <p>
+      <a href="http://www.yanzm1.xyz" target="_blank">http://www.yanzm1.xyz</a>
   </p>
   <br/>
   <br/>
   <p>
-    1，获取艳照门最新地址方法：向邮箱 <span style="color:#ff0000;">yanzhaowangdizhi@gmail.com</span> 发任意内容邮件,即可获取到最新地址。
+    1，获取【辣妹社区】最新地址方法：向邮箱 <span style="color:#ff0000;">yanzhaowangdizhi@gmail.com</span> 发任意内容邮件,即可获取到最新地址。
    </p>  
    <p>
     2.收藏本网页,获取最新可访问地址。
