--- a/index.html
+++ b/index.html
@@ -1,15 +1,36 @@
-<div style="text-align:center;font-size:18px;line-height:36px;">
-  <h3>【艳照门】最新可访问地址(收藏该网页或记住该网址,可防止与本站失去联系)</h3>
+<!DOCTYPE html>
+<html>
+<head>
+<title>【艳照门】最新地址</title>
+<meta name="keywords" content="">
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no">
+</head>
+<body>
+<div style="text-align:center;font-size:20px;">
+  <h3>【艳照门】最新可访问地址</h3>
   <p>
-    <a href="http://www.yanzm11.xyz" target="_blank">http://www.yanzm11.xyz</a>
-   </p>    
-    <p>
-      <a href="http://www.yanzm12.xyz" target="_blank">http://www.yanzm12.xyz</a>
-  </p>
-  <br/>
-  <br/>
+    <a href="https://www.yanzhaom14.xyz" target="_blank">https://www.yanzhaom14.xyz</a>
+  </p> 
   <p>
-    1，获取【艳照门】最新地址方法：向邮箱 <span style="color:#ff0000;">yanzhaowangdizhi@gmail.com</span> 发任意内容邮件,即可获取到最新地址。
+    <a href="https://www.yanzhaom15.xyz" target="_blank">https://www.yanzhaom15.xyz</a>
+  </p> 
+  <p>
+    <a href="https://www.yanzhaom16.xyz" target="_blank">https://www.yanzhaom16.xyz</a>
+  </p> 
+  <br/> 
+   <p>
+    1.<span style="color:#ff0000;">请务必收藏本网页,防止域名无法访问而失联,通过本网页获取最新可访问地址</span>
+   </p>
+   <p>
+    1. 向邮箱：yanzhaowangdizhi@gmail.com  发送任意内容的邮件获取最新地址
+   </p>
+</div>
+<div style="text-align:center;">
+ 
+</div>
+</body>
+</html>
    </p>  
    <p>
     2.收藏本网页,获取最新可访问地址。
